--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/rate-limit": "^9.1.0",
     "@fastify/websocket": "^10.0.1",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "5.22.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "mqtt": "^5.3.3",
@@ -37,7 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.0",
-    "prisma": "^5.22.0",
+    "prisma": "5.22.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vitest": "^2.1.4"
