fix: pin Prisma version to 5.22.0 for compatibility

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,8 +30,8 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Install runtime dependencies for AWS IoT SDK
-RUN apk add --no-cache libstdc++
+# Install runtime dependencies for AWS IoT SDK and Prisma
+RUN apk add --no-cache libstdc++ openssl openssl1.1-compat
 
 # Copy package files
 COPY package*.json ./
