--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "vue": "^3.4.27",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "echarts": "^5.4.3",
+    "vue-echarts": "^6.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
