--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -51,8 +51,13 @@ services:
       AWS_IOT_CERT_PATH: /run/secrets/aws_iot_cert
       AWS_IOT_KEY_PATH: /run/secrets/aws_iot_key
       AWS_IOT_CA_PATH: /run/secrets/aws_iot_ca
-      MQTT_TOPICS_TELEMETRY: ${MQTT_TOPICS_TELEMETRY:-factory/+/+/telemetry}
-      MQTT_TOPICS_STATUS: ${MQTT_TOPICS_STATUS:-factory/+/+/status}
+      MQTT_TOPICS_TELEMETRY: ${MQTT_TOPICS_TELEMETRY:-factory/+/+/+/+/telemetry}
+      MQTT_TOPICS_STATUS: ${MQTT_TOPICS_STATUS:-ops/+/+/+/gateway/+/status}
+      REDIS_URL: redis://redis:6379
+      REDIS_PREFIX: ${REDIS_PREFIX:-iot}
+      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID}
+      FIREBASE_CLIENT_EMAIL: ${FIREBASE_CLIENT_EMAIL}
+      FIREBASE_PRIVATE_KEY: ${FIREBASE_PRIVATE_KEY}
       CORS_ORIGIN: ${CORS_ORIGIN:-https://testingiot.seiminteractive.io}
       LOG_LEVEL: ${LOG_LEVEL:-info}
     secrets:
@@ -64,6 +69,8 @@ services:
         condition: service_healthy
       migrator:
         condition: service_completed_successfully
+      redis:
+        condition: service_started
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3002/health"]
       interval: 30s
@@ -93,6 +100,15 @@ services:
       interval: 30s
       timeout: 5s
       retries: 3
+    restart: unless-stopped
+    networks:
+      - iot-network
+
+  redis:
+    image: redis:7-alpine
+    container_name: iot-telemetry-redis
+    ports:
+      - "127.0.0.1:6379:6379"
     restart: unless-stopped
     networks:
       - iot-network
