--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.27",
     "axios": "^1.7.2",
     "echarts": "^5.4.3",
+    "firebase": "^12.7.0",
+    "vue": "^3.4.27",
     "vue-echarts": "^6.1.0"
   },
   "devDependencies": {
