--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.7.2",
     "echarts": "^5.4.3",
     "firebase": "^12.7.0",
+    "gridstack": "^10.3.1",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.4.27",
+    "vue-router": "^4.5.0",
     "vue-echarts": "^6.1.0"
   },
   "devDependencies": {
