--- a/backend/env.example
+++ b/backend/env.example
@@ -33,3 +33,16 @@ PERSIST_DEFAULT_MODE=none
 
 REDIS_URL=redis://localhost:6379
 REDIS_PREFIX=iot
+
+# OpenAI (OBLIGATORIO)
+OPENAI_API_KEY=sk-...
+
+# AI Scheduler/Worker (para que corran)
+AI_CRON_ENABLED=true
+AI_CRON_INTERVAL_MINUTES=5   # En local, cada 5 min; en prod 60+
+
+# Limits (opcional, ya tienen defaults)
+AI_MAX_OUTPUT_TOKENS=1000
+AI_MAX_RETRIES=3
+AI_DEFAULT_MODEL=gpt-4.1-nano
+AI_WORKER_ENABLED=true
